[gd_scene load_steps=30 format=3 uid="uid://b6gb811c07038"]

[ext_resource type="Texture2D" uid="uid://dyl2mwid0m3y2" path="res://Graphical Assets/sprites/frog/idle/frog-idle-1.png" id="1_321vw"]
[ext_resource type="Script" path="res://Frog.gd" id="1_n2b14"]
[ext_resource type="Texture2D" uid="uid://o8elr5cq3gns" path="res://Graphical Assets/sprites/enemy-death/enemy-death-1.png" id="1_xi86y"]
[ext_resource type="Texture2D" uid="uid://bybkbg7m5cn85" path="res://Graphical Assets/sprites/enemy-death/enemy-death-2.png" id="2_8veyx"]
[ext_resource type="Texture2D" uid="uid://c8o3qcfkj8aj8" path="res://Graphical Assets/sprites/frog/idle/frog-idle-2.png" id="2_haoc6"]
[ext_resource type="Texture2D" uid="uid://cqbqf7atckb8r" path="res://Graphical Assets/sprites/enemy-death/enemy-death-3.png" id="3_54rtt"]
[ext_resource type="Texture2D" uid="uid://bo5mbc2etpe71" path="res://Graphical Assets/sprites/frog/idle/frog-idle-3.png" id="3_n4nfw"]
[ext_resource type="Texture2D" uid="uid://b0n1j3q3j00d5" path="res://Graphical Assets/sprites/frog/idle/frog-idle-4.png" id="4_knw55"]
[ext_resource type="Texture2D" uid="uid://dym7s21w3kons" path="res://Graphical Assets/sprites/enemy-death/enemy-death-4.png" id="4_o0nmj"]
[ext_resource type="Texture2D" uid="uid://ci2ipkr7oy8c7" path="res://Graphical Assets/sprites/enemy-death/enemy-death-5.png" id="5_ym1ag"]
[ext_resource type="Texture2D" uid="uid://8ceolscum0fb" path="res://Graphical Assets/sprites/enemy-death/enemy-death-6.png" id="6_oyevw"]
[ext_resource type="Texture2D" uid="uid://du56vvx8n4mqs" path="res://Graphical Assets/sprites/frog/jump/frog-jump-1.png" id="11_weuim"]
[ext_resource type="Texture2D" uid="uid://bcax3mmtioffe" path="res://Graphical Assets/sprites/frog/jump/frog-jump-2.png" id="12_iugni"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aipxv"]
size = Vector2(15, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnoik"]
atlas = ExtResource("1_xi86y")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_2enk6"]
atlas = ExtResource("2_8veyx")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_x27in"]
atlas = ExtResource("3_54rtt")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcgiq"]
atlas = ExtResource("4_o0nmj")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_m52jp"]
atlas = ExtResource("5_ym1ag")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw68i"]
atlas = ExtResource("6_oyevw")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4thm"]
atlas = ExtResource("1_321vw")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ldug"]
atlas = ExtResource("2_haoc6")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3tsk"]
atlas = ExtResource("3_n4nfw")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix10m"]
atlas = ExtResource("4_knw55")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gror"]
atlas = ExtResource("11_weuim")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glwgl"]
atlas = ExtResource("12_iugni")
region = Rect2(0, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6y124"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnoik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2enk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x27in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcgiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m52jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw68i")
}],
"loop": true,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4thm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ldug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3tsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix10m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4thm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4thm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4thm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4thm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4thm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4thm")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gror")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glwgl")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_y1pht"]
radius = 142.056

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqw0p"]
size = Vector2(9, 4)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_n2b14")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_aipxv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -2)
scale = Vector2(1, 0.963415)
sprite_frames = SubResource("SpriteFrames_6y124")
animation = &"Idle"

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_y1pht")

[node name="FrogDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrogDeath"]
position = Vector2(0.5, -6)
shape = SubResource("RectangleShape2D_nqw0p")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="FrogDeath" to="." method="_on_frog_death_body_entered"]
